--- a/src/main/resources/templates/student/signin.html
+++ b/src/main/resources/templates/student/signin.html
@@ -25,6 +25,7 @@
 			<!-- Title Header Start -->
 			<section class="login-screen-sec">
 				<div class="container">
+				
 					<div class="login-screen">
 						<h2>Student Signin</h2>
 						
@@ -45,6 +46,7 @@
 							<button class="btn btn-login" type="submit">Login</button>
 							<span>You Have No Account? <a th:href="@{/student/signup}"> Create An Account</a></span>
 							<span><a href="lost-password.html"> Forget Password</a></span>
+							<span><a  th:href="@{/}">Home page</a></span>
 						</form>
 					</div>
 				</div>
