--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,6 +12,10 @@
         <!-- Core theme CSS (includes Bootstrap)-->
        
         <link href="styles.css" rel="stylesheet" />
+        
+        <style type="text/css">
+/*         .col-lg-7{width: 700px;height: 700px;padding-bottom: 0%;} */
+        </style>
     </head>
     <body>
         <!-- Responsive navbar-->
@@ -24,7 +28,9 @@
                         <!-- <li class="nav-item"><a class="nav-link active" aria-current="index.html" href="#!">Home</a></li> -->
                         <li class="nav-item"><a class="nav-link active" th:href="@{/student/signup}">Student Registration</a></li>
                         <li class="nav-item"><a class="nav-link active" th:href="@{/recruiter/signup}">Recruiter Registration</a></li>
-                        <li class="nav-item"><a class="nav-link active" th:href="@{/admin}">College Login</a></li>  
+                        <!-- <li class="nav-item"><a class="nav-link active" th:href="@{/admin}">College Login</a></li> -->
+                        <!-- <li class="nav-item"><a class="nav-link active" th:href="@{/}">Home page</a></li> -->
+                        
                     </ul>
                 </div>
             </div>
@@ -33,7 +39,7 @@
         <div class="container px-4 px-lg-5">
             <!-- Heading Row-->
             <div class="row gx-4 gx-lg-5 align-items-center my-5">
-                <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="/img/college.jpg" width="100%" height="100%" alt="..." /></div>
+                <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="/img/college1.jpg" width="100%" height="100%" alt="..." /></div>
                 
             </div>
             <!-- Call to Action-->
@@ -60,6 +66,7 @@
                         <div class="card-footer"><a class="btn btn-primary btn-sm" th:href="@{/recruiter/signin}">Recruiter Portal</a></div>
                     </div>
                 </div>
+              <!--  
                 <div class="col-md-4 mb-5">
                     <div class="card h-100">
                         <div class="card-body">
@@ -69,6 +76,7 @@
                         <div class="card-footer"><a class="btn btn-primary btn-sm" th:href="@{/admin}">Admin Portal</a></div>
                     </div>
                 </div>
+               -->
             </div>
         </div>
         <!-- Footer-->
