--- a/src/main/resources/templates/recruiter/rsignup.html
+++ b/src/main/resources/templates/recruiter/rsignup.html
@@ -39,14 +39,22 @@
 					<div class="signup-screen">
 						<h2>Recruiter Registration</h2>
 						<form action="#" th:action="@{/recruiter/save}" th:object="${recruiter}"  method="post" >
-							<input type="text" class="form-control" placeholder="Your Name" name="sname" th:field="*{rname}">
-							<input type="text" class="form-control" placeholder="Company Name" name="course" th:field="*{company}">
-							<textarea th:field="*{address}"  class="form-control"></textarea>			
-							<input type="number" class="form-control" placeholder="Contact Number" name="dob" th:field="*{pno}">
-							<input type="email" class="form-control" placeholder="Enter Email id"  th:field="*{email}">
-							<input type="text" class="form-control" placeholder="Enter website" th:field="*{website}">
-							<input type="password" class="form-control" placeholder="Enter Password" th:field="*{password}">
-							<input type="password" class="form-control" placeholder="Retype Password">
+							Your Name
+							<input type="text" class="form-control" placeholder="Your Name" name="sname" th:field="*{rname}" required="required">
+							Company Name
+							<input type="text" class="form-control" placeholder="Company Name" name="course" th:field="*{company}" required="required">
+							Address
+							<textarea th:field="*{address}"  class="form-control" required="required"></textarea>			
+							Contact Number
+							<input type="number" class="form-control" placeholder="Contact Number" name="dob" th:field="*{pno}" required="required">
+							Enter Email id
+							<input type="email" class="form-control" placeholder="Enter Email id"  th:field="*{email}"required="required">
+							Enter website
+							<input type="text" class="form-control" placeholder="Enter website" th:field="*{website}" required="required">
+							Enter Password
+							<input type="password" class="form-control" placeholder="Enter Password" th:field="*{password}" required="required">
+							Retype Password
+							<input type="password" class="form-control" placeholder="Retype Password" required="required">
 							<button class="btn btn-login" type="submit" >Sign Up</button>
 							<span>Have You Account? <a th:href="@{/recruiter/signin}"> Login</a></span>	
 						</form>
