--- a/src/main/resources/templates/student/signup.html
+++ b/src/main/resources/templates/student/signup.html
@@ -38,19 +38,32 @@
 					<div class="signup-screen">
 						<h2>Student Registration</h2>
 						<form action="#" th:action="@{/save}" th:object="${student}"  method="post" >
-							<input type="text" class="form-control" placeholder="Your Name" name="sname" th:field="*{sname}">
-							<input type="text" class="form-control" placeholder="Your Course" name="course" th:field="*{course}">			
-							<input type="text" class="form-control" placeholder="Enter your Branch" name="branch" th:field="*{branch}">
-							<input type="date" class="form-control" placeholder="Enter Date of Birth" name="dob" th:field="*{dob}">
-							<input type="number" class="form-control" placeholder="Enter 10th Percentage" name="s_marks" th:field="*{s_marks}">
-							<input type="number" class="form-control" placeholder="Enter 12th Percentage" name="hs_marks" th:field="*{hs_marks}">
-							<input type="number" class="form-control" placeholder="Enter Graduation Percentage" name="b_marks" th:field="*{b_marks}">
-							<input type="number" class="form-control" placeholder="Enter Post Graduation Percentage" name="m_marks" th:field="*{m_marks}">
-							<textarea rows="5" class="form-control" name="address" th:field="*{address}" placeholder="Enter your address"></textarea>
-							<input type="number" class="form-control" placeholder="Enter Contact number" name="contact" th:field="*{contact}">
-							<input type="email" class="form-control" placeholder="Enter e-mail" name="email" th:field="*{email}">
-							<input type="password" class="form-control" placeholder="Enter Password" th:field="*{password}">
-							<input type="password" class="form-control" placeholder="Retype Password">
+							Your Name
+							<input type="text" class="form-control" placeholder="Your Name" name="sname" th:field="*{sname}" required="required">
+							Your Course
+							<input type="text" class="form-control" placeholder="Your Course" name="course" th:field="*{course}" required="required">			
+							Enter your Branch
+							<input type="text" class="form-control" placeholder="Enter your Branch" name="branch" th:field="*{branch}" required="required">
+							Enter Date of Birth
+							<input type="date" class="form-control" placeholder="Enter Date of Birth" name="dob" th:field="*{dob}" required="required">
+							Enter 10th Percentage:
+							<input type="number" class="form-control" placeholder="Enter 10th Percentage" name="s_marks" th:field="*{s_marks}" required="required">
+							Enter 12th Percentage
+							<input type="number" class="form-control" placeholder="Enter 12th Percentage" name="hs_marks" th:field="*{hs_marks}" required="required">
+							Enter Graduation Percentage
+						<!-- 	<input type="number" class="form-control" placeholder="Enter Graduation Percentage" name="b_marks" th:field="*{b_marks}" required="required"> -->
+							Enter Post Graduation Percentage
+							<input type="number" class="form-control" placeholder="Enter Post Graduation Percentage" name="m_marks" th:field="*{m_marks}" required="required">
+							Enter your address
+							<textarea rows="5" class="form-control" name="address" th:field="*{address}" placeholder="Enter your address" required="required"></textarea>
+							Enter Contact number
+							<input type="number" class="form-control" placeholder="Enter Contact number" name="contact" th:field="*{contact}" required="required">
+							Enter e-mail
+							<input type="email" class="form-control" placeholder="Enter e-mail" name="email" th:field="*{email}" required="required">
+							Enter Password
+							<input type="password" class="form-control" placeholder="Enter Password" th:field="*{password}" required="required">
+							Retype Password
+							<input type="password" class="form-control" placeholder="Retype Password" required="required">
 							<button class="btn btn-login" type="submit" >Sign Up</button>
 							<span>Do you have an account? <a th:href="@{/student/signin}"> Login</a></span>	
 						</form>
@@ -124,5 +137,6 @@
 		</div>
 	</body>
 
+ 
 <!-- signup42:17-->
 </html>
