--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,7 +39,7 @@
         <div class="container px-4 px-lg-5">
             <!-- Heading Row-->
             <div class="row gx-4 gx-lg-5 align-items-center my-5">
-                <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="/img/college1.jpg" width="100%" height="100%" alt="..." /></div>
+                <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="/img/college.jpg" width="100%" height="100%" alt="..." /></div>
                 
             </div>
             <!-- Call to Action-->
